skills/kamae-rs/examples/tests/compile_fail/en_route_is_not_waiting.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/en_route_is_not_waiting.rs:18:18
   |
18 |     only_waiting(transition.state);
   |     ------------ ^^^^^^^^^^^^^^^^ expected `WaitingRequest`, found `EnRouteRequest`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/en_route_is_not_waiting.rs:5:4
   |
 5 | fn only_waiting(_: WaitingRequest) {}
   |    ^^^^^^^^^^^^ -----------------
